[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geospatial_tools_cli"
version = "1.0"
description = "Geospatial Tools CLI for processing spatial data"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fiona==1.10.1",
    "geopandas==1.0.1",
    "pyshp==2.3.1",
    "pyproj==3.7.0",
    "gdal==3.10.1"
]
requires-python = ">=3.7"

[project.scripts]
geos_tools_cli = "geospatial_tools_cli.cli:main"
